--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,16 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+        AppBundle\Entity\Client: plaintext
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        in_memory: {memory: ~}
+        in_database:
+            entity:
+                class: AppBundle:Client
+                property: email
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -15,6 +20,21 @@ security:
 
         main:
             anonymous: ~
+
+            provider: in_database
+            
+            form_login:
+                login_path: connecter
+                check_path: connecter
+                default_target_path: profil
+                always_use_default_target_path : true
+            logout:
+                path:   deconnexion
+
+    # access_control:
+    #     - { path: ^/profil, roles: ROLE_USER }
+            
+
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
